Fixes issue with footer subscribe button alignment

--- a/_includes/components/universal/Graph/styles.scss
+++ b/_includes/components/universal/Graph/styles.scss
@@ -10,7 +10,7 @@
 
 .Graph-svg {
   width: 100%;
-  overflow: visible !important;
+  overflow: hidden;
 }
 
 .Graph-outline {
